--- a/client/src/app/order-page/order-page.component.html
+++ b/client/src/app/order-page/order-page.component.html
@@ -40,7 +40,7 @@
       </tbody>
     </table>
     <div class="order-summary">
-      <p>Общая стоимость <strong>{{order.price}} руб.</strong></p>
+      <p>Общая стоимость <strong>{{order.price}} грн.</strong></p>
     </div>
   </div>
   <div class="modal-footer">
