--- a/client/src/app/order-page/order-positions/order-positions.component.html
+++ b/client/src/app/order-page/order-positions/order-positions.component.html
@@ -12,7 +12,7 @@
     <tbody>
     <tr *ngFor="let position of positions">
       <td>{{position.name}}</td>
-      <td>{{position.cost}} руб.</td>
+      <td>{{position.cost}} грн.</td>
       <td>
         <div class="input-field inline order-position-input">
           <input type="number" value="1" min="1" [(ngModel)]="position.quantity">
