--- a/client/src/app/overview-page/overview-page.component.html
+++ b/client/src/app/overview-page/overview-page.component.html
@@ -16,7 +16,7 @@
     <div class="card light-blue lighten-2 white-text">
       <div class="card-content">
         <span class="card-title">Выручка:</span>
-        <h3>{{data.gain.yesterday}} руб.</h3>
+        <h3>{{data.gain.yesterday}} грн.</h3>
         <h3
           class="m0 mb1"
           [ngClass]="{
@@ -35,7 +35,7 @@
           {{data.gain.isHigher ? 'выше' : 'ниже'}}
           среднего:
           {{data.gain.compare}}
-          руб. в день
+          грн. в день
         </p>
       </div>
     </div>
